--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jv30_jpa_relationship
 
 spring.datasource.username=root
 
-spring.datasource.password=M241289
+spring.datasource.password=M241289mysql
 
 spring.jpa.show-sql=true
 
